--- a/mijoro boutique/index.html
+++ b/mijoro boutique/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
-<html lang="fr">
-<head>
+
+
+
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1, viewport-fit=cover" />
   <title>Mijoro Boutique — Version Pro</title>
+
+  <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 
   <noscript>
@@ -25,59 +30,137 @@
     <div class="loader-text">Mijoro</div>
   </div>
 
-  <!-- Sections: Home -->
+  <!-- HOME -->
   <section id="home" class="active" aria-label="Accueil" aria-hidden="false">
     <div class="slideshow" aria-label="Promotion">
       <div class="slide-track" id="slide-track">
-        <!-- Add your slides here -->
         <div class="slide">
           <a href="#"><img src="https://i.ibb.co/DP1xT5Ky/8b7e15f5dd5dd2290ac52af728cc12c3.jpg" alt="Offre promo 1"></a>
         </div>
         <div class="slide">
           <a href="#"><img src="https://i.ibb.co/B5vcHVZX/ddce6f18e3cdf72f038584cdb034bbd0.jpg" alt="Offre promo 2"></a>
         </div>
-        <!-- ... More slides ... -->
       </div>
       <div class="slide-dots" id="slide-dots" aria-hidden="true"></div>
     </div>
-    <h1 id="home-title" data-i18n="home_title">Tongasoa ATO amin'ny boutique anay!</h1>
+    <h1 id="home-title" data-i18n="home_title">Tongasoa eto amin'ny fivarotana Malagasy!</h1>
     <p id="home-sub" data-i18n="home_sub">Découvre des eBooks, vidéos et apps/jeux pour t’aider à réussir en ligne.</p>
   </section>
 
-  <!-- Shop section -->
-  <section id="shop" aria-label="Boutique - Produits numériques" aria-hidden="true">
-    <h2>Nos Produits Numériques</h2>
-    <div class="filters" id="shop-filters" role="toolbar" aria-label="Filtrer les produits">
-      <button type="button" class="filter-btn active" data-filter="all" data-i18n="filter_all">Tous</button>
-      <button type="button" class="filter-btn" data-filter="ebooks" data-i18n="filter_ebooks">Ebooks</button>
-      <button type="button" class="filter-btn" data-filter="videos" data-i18n="filter_videos">Vidéos</button>
-      <button type="button" class="filter-btn" data-filter="vip" data-i18n="filter_vip">VIP</button>
-      <button type="button" class="filter-btn" data-filter="promo" data-i18n="filter_promo">Promo</button>
-      <button type="button" class="filter-btn" data-filter="free" data-i18n="filter_free">Gratuit</button>
-    </div>
-    <div class="products-section" aria-live="polite">
-      <div id="products-row" class="products-row" role="list" aria-label="Liste des produits — défilement vertical"></div>
-    </div>
-  </section>
 
-  <!-- Shop popup (overlay) -->
+<section id="shop" aria-label="Boutique - Produits numériques" aria-hidden="true">
+  <!-- Tools toggle button (gear) - CORNER GAUCHE -->
+  <button
+    id="shopToolsToggle"
+    class="tools-toggle"
+    type="button"
+    aria-label="Afficher/Masquer les outils du shop"
+    aria-expanded="false"
+    aria-controls="shop-tools"
+    style="position:sticky;top:8px;margin-left:10px;z-index:15;display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;border-radius:10px;border:none;cursor:pointer;color:#fff;background:linear-gradient(180deg, color-mix(in srgb, #334155 92%, #fff 8%), #334155);box-shadow:0 8px 18px rgba(0,0,0,.25);"
+  >
+    <i class="fa-solid fa-sliders" style="font-size:16px;"></i>
+  </button>
+
+  <!-- SHOP TOOLS (collapse section) -->
+  <div id="shop-tools" class="shop-tools" role="region" aria-label="Outils de la boutique" style="overflow:clip;max-height:0;opacity:0;transform:translateY(-6px);transition:max-height .28s ease,opacity .18s ease,transform .28s ease;pointer-events:none;margin:0 10px;">
+    <!-- Topbar: titre afovoany, actions any amin’ny corner droite -->
+    <header class="shop-topbar" role="banner"
+      style="display:grid;grid-template-columns:1fr auto 1fr;align-items:center;min-height:52px;padding:8px 4px;">
+      <h2 class="shop-title"
+        style="grid-column:2;justify-self:center;margin:0;font-size:18px;font-weight:800;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">
+        Nos Produits Numériques
+      </h2>
+
+      <div class="shop-actions"
+        style="grid-column:3;justify-self:end;display:inline-flex;align-items:center;gap:8px;margin-right:max(2px, env(safe-area-inset-right));">
+        <button id="btnLogin" class="icon-btn" title="Login (Owner only)" aria-label="Login"
+          style="width:36px;height:36px;display:inline-flex;align-items:center;justify-content:center;border:none;border-radius:10px;cursor:pointer;background:linear-gradient(180deg, color-mix(in srgb, #2563eb 92%, #fff 8%), #2563eb);color:#fff;box-shadow:0 6px 16px rgba(0,0,0,.18);">
+          <i class="fa-solid fa-right-to-bracket"></i>
+        </button>
+        <button id="btnLogout" class="icon-btn" title="Logout" aria-label="Logout" style="display:none;width:36px;height:36px;display:inline-flex;align-items:center;justify-content:center;border:none;border-radius:10px;cursor:pointer;background:linear-gradient(180deg, color-mix(in srgb, #ef4444 92%, #fff 8%), #ef4444);color:#fff;box-shadow:0 6px 16px rgba(0,0,0,.18);">
+          <i class="fa-solid fa-right-from-bracket"></i>
+        </button>
+        <!-- “Ajouter” miafina mandra-pahalogin (asehon'ny JS) -->
+        <button id="btnAddProduct" class="param-btn" title="Add product" style="display:none;height:36px;display:inline-flex;align-items:center;gap:8px;border:none;border-radius:10px;padding:0 12px;background:linear-gradient(180deg, color-mix(in srgb, #16a34a 92%, #fff 8%), #16a34a);color:#fff;font-weight:700;box-shadow:0 6px 16px rgba(0,0,0,.18);">
+          <i class="fa-solid fa-plus"></i> <span>Ajouter</span>
+        </button>
+      </div>
+    </header>
+
+    <!-- Toolbar: Search + Filters -->
+    <div class="shop-toolbar" role="region" aria-label="Recherche et filtres" style="display:grid;gap:10px;margin:6px 0 10px;">
+      <!-- Search -->
+      <div class="search">
+        <label for="search" class="sr-only">Recherche produits</label>
+        <input
+          id="search"
+          type="search"
+          placeholder="Rechercher..."
+          aria-label="Recherche produits"
+          data-i18n="search_placeholder"
+          data-i18n-placeholder
+          autocomplete="off"
+          inputmode="search"
+          style="width:100%;height:40px;padding:8px 12px 8px 38px;border:1px solid #cfd6df;background-color:#ffffff;color:#111111;border-radius:999px;outline:none;font-size:14px;box-shadow:0 1px 2px rgba(0,0,0,.04);background-image:url('data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2218%22 height=%2218%22 viewBox=%220 0 24 24%22 fill=%22none%22 stroke=%23909aa3 stroke-width=%222%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22%3E%3Ccircle cx=%2711%27 cy=%2711%27 r=%278%27/%3E%3Cpath d=%27m21 21-4.3-4.3%27/%3E%3C/svg%3E');background-repeat:no-repeat;background-position:12px center;background-size:18px 18px;"
+        />
+      </div>
+
+      <!-- Filters -->
+      <div class="filters" id="filters" role="toolbar" aria-label="Filtrer les produits" style="display:flex;gap:8px;overflow-x:auto;padding-bottom:2px;-webkit-overflow-scrolling:touch;">
+        <button type="button" class="filter-btn active" data-category="all" data-i18n="filter_all"
+          style="flex:0 0 auto;height:34px;padding:0 12px;border:1px solid rgba(0,0,0,0.08);background:#f7f9fc;color:#111;border-radius:999px;font-size:13px;font-weight:600;cursor:pointer;">
+          Tous
+        </button>
+        <button type="button" class="filter-btn" data-category="ebooks" data-i18n="filter_ebooks"
+          style="flex:0 0 auto;height:34px;padding:0 12px;border:1px solid rgba(0,0,0,0.08);background:#f7f9fc;color:#111;border-radius:999px;font-size:13px;font-weight:600;cursor:pointer;">
+          Ebooks
+        </button>
+        <button type="button" class="filter-btn" data-category="videos" data-i18n="filter_videos"
+          style="flex:0 0 auto;height:34px;padding:0 12px;border:1px solid rgba(0,0,0,0.08);background:#f7f9fc;color:#111;border-radius:999px;font-size:13px;font-weight:600;cursor:pointer;">
+          Vidéos
+        </button>
+        <button type="button" class="filter-btn" data-category="vip" data-i18n="filter_vip"
+          style="flex:0 0 auto;height:34px;padding:0 12px;border:1px solid rgba(0,0,0,0.08);background:#f7f9fc;color:#111;border-radius:999px;font-size:13px;font-weight:600;cursor:pointer;">
+          VIP
+        </button>
+        <button type="button" class="filter-btn" data-category="promo" data-i18n="filter_promo"
+          style="flex:0 0 auto;height:34px;padding:0 12px;border:1px solid rgba(0,0,0,0.08);background:#f7f9fc;color:#111;border-radius:999px;font-size:13px;font-weight:600;cursor:pointer;">
+          Promo
+        </button>
+        <button type="button" class="filter-btn" data-category="free" data-i18n="filter_free"
+          style="flex:0 0 auto;height:34px;padding:0 12px;border:1px solid rgba(0,0,0,0.08);background:#f7f9fc;color:#111;border-radius:999px;font-size:13px;font-weight:600;cursor:pointer;">
+          Gratuit
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Product list (full-screen rehefa miafina ny tools) -->
+  <div class="products-section" aria-live="polite">
+    <div id="products-row" class="products-row" role="list" aria-label="Liste des produits — défilement vertical"></div>
+  </div>
+</section>
+
+
+  <!-- SHOP POPUP -->
   <div id="shop-popup" role="dialog" aria-modal="true" aria-hidden="true" tabindex="-1">
     <button type="button" class="close-popup" aria-label="Fermer" onclick="closeShop()"><i class="fa-solid fa-xmark"></i></button>
-    <div class="filters" id="filters" role="toolbar" aria-label="Filtres Produits (popup)">
+    <div class="filters" id="popup-filters" role="toolbar" aria-label="Filtres Produits (popup)">
       <button type="button" class="filter-btn active" data-category="ebooks" data-i18n="filter_ebooks">eBooks</button>
       <button type="button" class="filter-btn" data-category="apps" data-i18n="filter_vip">Apps/Jeux</button>
       <button type="button" class="filter-btn" data-category="videos" data-i18n="filter_videos">Vidéos</button>
     </div>
     <div class="search">
-      <label for="search" class="sr-only">Recherche produits</label>
-      <input id="search" placeholder="Rechercher..." aria-label="Recherche produits"
-       data-i18n="search_placeholder" data-i18n-placeholder autocomplete="off" inputmode="search">
+      <label for="search-popup" class="sr-only">Recherche produits</label>
+      <input id="search-popup" placeholder="Rechercher..." aria-label="Recherche produits"
+        data-i18n="search_placeholder" data-i18n-placeholder autocomplete="off" inputmode="search">
     </div>
     <div id="products-box" aria-live="polite"></div>
     <div class="pagination" id="pagination" role="navigation" aria-label="Pagination"></div>
   </div>
 
-  <!-- Cart panel + drawer -->
+  <!-- CART PANEL -->
   <div id="cart-panel" aria-live="polite">
     <button id="cart-toggle" title="Voir le panier" aria-label="Voir le panier"><i class="fa-solid fa-basket-shopping"></i></button>
     <button type="button" title="Vider le panier" onclick="clearCart()" aria-label="Vider le panier"><i class="fa-solid fa-trash"></i></button>
@@ -97,14 +180,14 @@
     </div>
   </div>
 
-  <!-- Bottom menu -->
+  <!-- BOTTOM MENU -->
   <div class="bottom-menu" role="navigation" aria-label="Menu bas">
     <button type="button" class="menu-btn menu-home active" onclick="showSection('home', this)"><i class="fa-solid fa-house"></i><span>Home</span></button>
     <button type="button" class="menu-btn menu-shop" onclick="showSection('shop', this)"><i class="fa-solid fa-store"></i><span>Shop</span></button>
     <button type="button" class="menu-btn menu-param" onclick="toggleParamFixed()"><i class="fa-solid fa-gear"></i><span>Paramètre</span></button>
   </div>
 
-  <!-- Param fixed (right) -->
+  <!-- PARAM FIXED -->
   <aside id="param-fixed" class="hidden" aria-hidden="true" role="region" aria-label="Paramètres" inert>
     <div style="display:flex;align-items:center;gap:10px">
       <img src="https://i.ibb.co/zTvNMMQd/743c16d58accff74c1c37793816bd25f.jpg" alt="param" style="width:46px;height:46px;border-radius:8px;object-fit:cover;border:1px solid rgba(255,255,255,.06)">
@@ -113,6 +196,7 @@
         <small style="color:#ddd">Personnalisez votre expérience</small>
       </div>
     </div>
+
     <!-- Langue -->
     <div>
       <h4 data-i18n="param_language">Langue</h4>
@@ -140,6 +224,8 @@
         </button>
       </div>
     </div>
+
+
     <!-- Thème -->
     <div>
       <h4 data-i18n="param_theme">Thème</h4>
@@ -161,6 +247,7 @@
         <!-- Rose/Jaune/Marron will be injected by app.js -->
       </div>
     </div>
+
     <div class="row" style="justify-content:space-between; margin-top:8px;">
       <button type="button" class="param-btn" onclick="openInfo('about')" data-i18n="about">À propos</button>
       <button type="button" class="param-btn" onclick="openInfo('contact')" data-i18n="contact">Contact</button>
@@ -168,7 +255,7 @@
     </div>
   </aside>
 
-  <!-- Quit modal -->
+  <!-- QUIT MODAL -->
   <div id="quit-modal" role="dialog" aria-modal="true" aria-hidden="true" tabindex="-1" aria-labelledby="quit-title">
     <div class="modal-card" role="document">
       <h3 id="quit-title">Voulez-vous quitter l’application ?</h3>
@@ -179,7 +266,8 @@
       </div>
     </div>
   </div>
-  <!-- Info modal -->
+
+  <!-- INFO MODAL -->
   <div id="info-modal" role="dialog" aria-modal="true" aria-hidden="true" tabindex="-1" aria-labelledby="info-title">
     <div class="info-card" role="document">
       <h3 id="info-title">Informations</h3>
@@ -190,45 +278,50 @@
     </div>
   </div>
 
-  <!-- Loader Guard + iOS VH patch -->
+  <!-- Loader Guard + iOS VH patch (safe) -->
   <script>
-  (function(){
-    var MAX_WAIT_MS = 8000, SOFT_WAIT_MS = 400;
-    function qs(s){ return document.querySelector(s); }
-    function hideLoader(){
-      var l = qs('#loader'); if(!l) return;
-      l.classList.add('fade-out');
-      l.setAttribute('aria-hidden','true');
-      l.style.pointerEvents = 'none';
-      setTimeout(function(){ l.style.display = 'none'; }, 500);
-    }
-    function revealBaseUI(){
-      try {
-        document.body.setAttribute('aria-busy','false');
-        var home = document.getElementById('home');
-        if (home){ home.classList.add('active'); home.setAttribute('aria-hidden','false'); }
-        var bm = qs('.bottom-menu');
-        if (bm){ bm.style.display = 'flex'; bm.style.pointerEvents = 'auto'; }
-      } catch(_) {}
-    }
-    function onReady(cb){
-      if (document.readyState === 'complete' || document.readyState === 'interactive') cb();
-      else document.addEventListener('DOMContentLoaded', cb, { once: true });
-    }
-    onReady(function(){
-      setTimeout(revealBaseUI, SOFT_WAIT_MS);
-      setTimeout(function(){ hideLoader(); revealBaseUI(); }, MAX_WAIT_MS);
-    });
-  })();
+    (function(){
+      var MAX_WAIT_MS = 8000, SOFT_WAIT_MS = 400;
+      function qs(s){ return document.querySelector(s); }
+      function hideLoader(){
+        var l = qs('#loader'); if(!l) return;
+        l.classList.add('fade-out');
+        l.setAttribute('aria-hidden','true');
+        l.style.pointerEvents = 'none';
+        setTimeout(function(){ l.style.display = 'none'; }, 500);
+      }
+      function revealBaseUI(){
+        try {
+          document.body.setAttribute('aria-busy','false');
+          var home = document.getElementById('home');
+          if (home){ home.classList.add('active'); home.setAttribute('aria-hidden','false'); }
+          var bm = qs('.bottom-menu');
+          if (bm){ bm.style.display = 'flex'; bm.style.pointerEvents = 'auto'; }
+        } catch(_) {}
+      }
+      function onReady(cb){
+        if (document.readyState === 'complete' || document.readyState === 'interactive') cb();
+        else document.addEventListener('DOMContentLoaded', cb, { once: true });
+      }
+      onReady(function(){
+        setTimeout(revealBaseUI, SOFT_WAIT_MS);
+        setTimeout(function(){ hideLoader(); revealBaseUI(); }, MAX_WAIT_MS);
+      });
+    })();
   </script>
   <script>
-  (function(){
-    function setVH(){ var vh = window.innerHeight * 0.01; document.documentElement.style.setProperty('--vh', vh + 'px'); }
-    window.addEventListener('resize', setVH);
-    window.addEventListener('orientationchange', setVH);
-    setVH();
-  })();
+    (function(){
+      function setVH(){ var vh = window.innerHeight * 0.01; document.documentElement.style.setProperty('--vh', vh + 'px'); }
+      window.addEventListener('resize', setVH);
+      window.addEventListener('orientationchange', setVH);
+      setVH();
+    })();
   </script>
+  
+
+<div class="touch-edge-bottom" aria-hidden="true"></div>
+  <!-- App bundle -->
   <script src="app.js" defer></script>
 </body>
 </html>
+
